2001-10-16  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/intrinsics.cc,etc: set_telekenesis_fun(),
	get_item_usability() added to fix telekenesis, fetch spells.

2001-10-17  Dancer Vesperman  <dancer@users.sourceforge.net>

	* actorio.cc: Cast changeover
	* gamedat.cc: Cast changeover
	* xdrag.cc: Cast changeover
	* gamewin.cc: Cast changeover

2001-10-16  Jeff Freedman  <jeff@amy.nerble.net>

	* palette.cc (Palette): find_color() shouldn't look at the
	rotating colors at the end of the palette.
	* npctime.cc,actors.cc,gamewin.cc:  Support for 'cursed' flag.

2001-10-15  Jeff Freedman  <jeff@amy.nerble.net>

	* shapes/shapeinf.cc: Ammo_info::read().
	* actors.cc: Handle a couple special weapon 'powers'.
	* shapes/shapeinf.h (public): Weapon 'powers' added.
	* actors.h (public): Fix for 'training' bug.

2001-10-14  Jeff Freedman  <jeff@amy.nerble.net>

	* drag.cc: Watch for objects dropped when on a barge.

	* exult.cc,intrinsics.cc: Wizards_eye implemented.

2001-10-14  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* game.cc, gamewin.*, gamedat.cc: fixed some more display glitches on
	starting a new game

2001-10-13  Jeff Freedman  <jeff@amy.nerble.net>

	* Gump_manager.cc (Gump_manager): non_persistent_count added so we
	can do a fast "gump_mode()" test.
	* gamewin.cc,combat.cc:  No walking/combat if in 'gump mode'.

	* actors.cc,flags.h,npctimer.cc:  'Might' flag implemented.
	* effects.cc (Projectile_effect): More sprites implemented for
	various projectiles (like swordstrike).

2001-10-13  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* actors.cc: Helm of Light provides warmth
	* files/utils.cc: fixed BeOS trailing slash mkdir bug

2001-10-13  Patrick Burke  <takhisisii@yahoo.com.au>
	* data/credits.txt data/quotes.txt: Fixed formatting and ## escape.

2001-10-13  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/intrinsics.cc: Clone() intrinsic.
	* actors.cc: Clone() added.  Some monsters can split now.