@@ -71,7 +71,8 @@ int Monster_info::read
 	reach = *ptr && 15;		// Byte 8 - weapon reach.
 	weapon = (*ptr++ >> 4) & 15;
 	flags = *ptr++;			// Byte 9.
-	ptr += 2;			// Unknown (more flags?).
+	vulnerable = *ptr++;
+	immune = *ptr++;
 	m_cant_yell = (*ptr & (1<<5)) != 0;
 	m_cant_bleed = (*ptr & (1<<6)) != 0;
 	ptr++;
